# NodeGraphQt

./: pyproject.toml
NodeGraphQt/: pkg_info.py
NodeGraphQt/base/: menu.py
NodeGraphQt/widgets/: node_widgets.py  viewer.py
